syntax = "proto3";

package proto;

import "options.proto";

option go_package = "proto/pb";

service AsyncSer {
    rpc TransChannel(TransChannel.Req) returns (TransChannel.Rsp);
    rpc SSPullChannel(SSPullChannel.Req) returns (SSPullChannel.Rsp);
}

message ChannelMsg {
    string Name = 1;
    string Content = 2;
}

message TransChannel {
    option (rpc_option).route_key = "";
    message Req {
        ChannelMsg Msg = 1;
    }
    message Rsp {
        string Pass = 1;
    }
}

message SSPullChannel {
    option (rpc_option).route_key = "";
    message Req {
        string Pass = 1;
    }
    message Rsp {
        repeated ChannelMsg Msgs = 1;
    }
}
